# parsel

./: .gitignore  LICENSE  Makefile  README.md  freqshift_scale.cpp  main.cpp  main.py  out.cpp  out1.cpp  parsel.cabal  sample.psl  sample1.psl  sample2.psl
compiled_sample/: Makefile  Signal.cpp  Signal.h  fft4g.c  run.sh  sample.cpp
compiled_sample/include/: Signal.h
compiled_sample/soundfile-2.2/include/: SoundFileRead.h  SoundHeader.h
compiled_sample/soundfile-2.2/src/: SoundFileRead.cpp  SoundHeader.cpp
compiled_sample/src/: FSignal.cpp  Function.cpp  Function.h  Interval.h  SigFunc.cpp  SigFunc.h  Signal.cpp  Signal.h  outputs.cpp  outputs.h  sample.cpp  test.cpp
cpp/: Chunk.cpp  Chunk.h  FSignal.cpp  FSignal.h  Interval.cpp  Interval.h  Signal.cpp  Signal.h  fillers.cpp  fillers.h  includes.h  library.h  utils.cpp  utils.h
ftdetect/: psl.vim
samples/: arithmetic.psl  attr.psl  boolean.psl  conditional.psl  fold.psl  foldl.psl  freqshift.psl  functionapplication.psl  functiondef.psl  lambda.psl  let.psl  list.psl  literal.psl  map.psl  recursive.psl  sample.psl  sum.psl  test.psl  with.psl
src/: AST.hs  AlexToken.x  ExprConverter.hs  Generators.hs  Generators.hs-boot  Generators2.hs  GlobalScope.hs  HappyParser.y  Main.hs  SemanticAnalysis.hs  TypeCheck.hs
syntax/: psl.vim
test/: base.py  builder.py  tester.py
